{{$NEXT}}

    - Split MySQL into Percona and MariaDB

0.000029  2024-04-28 09:58:52+01:00 Europe/Lisbon

    - Add QDB_TMPDIR env var

0.000028  2024-04-25 13:00:04+01:00 Europe/Lisbon

    - Fix mariadb warning

0.000027  2024-04-25 12:24:25+01:00 Europe/Lisbon

    - Fix doc issue

0.000026  2024-04-16 15:04:26-07:00 America/Los_Angeles

    - Use MariaDB binaries when available
    - Silence mariadb complaints about using mysql binaries

0.000025  2024-04-16 14:34:21-07:00 America/Los_Angeles

    - Fix test error when DBD::mysql is not installed

0.000024  2024-02-07 17:19:03-08:00 America/Los_Angeles

    - Add QDB_MYSQL_SSL_FIPS env var

0.000023  2022-08-23 14:02:40-07:00 America/Los_Angeles

    - Allow an instance dir for pools

0.000022  2022-07-08 15:44:44-07:00 America/Los_Angeles

    - Better support for percona 5.7
    - Do not modify config reference that is passed in, make a copy

0.000021  2021-01-19 14:55:27-08:00 America/Los_Angeles

    - For pools, make sure cache db is stopped before marking it as ready
    - Move ready file outside the directory so it is not copied with the dir (ooops)
    - Add ability to show pool diag without showing all sql-server output

0.000020  2020-12-01 15:35:36-08:00 America/Los_Angeles

    - Watcher should use POSIX::_exit() since it is exec-like
    - Minimum mysqld version 5.6.0

0.000019  2020-11-30 15:40:36-08:00 America/Los_Angeles

    - Add watcher process to make sure cleanup happens

0.000018  2020-11-20 08:46:39-08:00 America/Los_Angeles

    - Fix bug where driver could be forgotten in pool during reclaim

0.000017  2020-11-16 08:26:03-08:00 America/Los_Angeles

    - Support for older percona mysqld's that need mysql_install_db run

0.000016  2020-11-13 11:28:35-08:00 America/Los_Angeles

    - Support older version of percona
    - Minor test fixes

0.000015  2020-08-14 20:45:04-07:00 America/Los_Angeles

    - Make it possible to clear old cache
    - Do not leave garbage in /tmp from tests
